src/test/ui/suggestions/lifetimes/missing-lifetimes-in-signature-2.nll.stderr
error[E0311]: the parameter type `T` may not live long enough
  --> $DIR/missing-lifetimes-in-signature-2.rs:20:5
   |
LL | /     foo.bar(move |_| {
LL | |
LL | |         t.test();
LL | |     });
   | |______^
   |
note: the parameter type `T` must be valid for the anonymous lifetime defined here...
  --> $DIR/missing-lifetimes-in-signature-2.rs:19:24
   |
LL | fn func<T: Test>(foo: &Foo, t: T) {
   |                        ^^^

error: aborting due to previous error

